# RxRadar

./: .gitignore  README.md  chat_with_assistant.html  pyproject.toml
server/: app.py
server/data/: goodrx-support.html
server/router/: agent.py  knowledge.py
server/utils/: agent_config.py  embedding.py  workflow.py
